app/styles/app.scss
@import 'base/normalize';
@import 'base/variables';


div.flexbox {
  display: flex;

  &.vis-holder {
    flex-direction: column;
    align-items: center;
    box-shadow: 2px 2px 3px #333;
    margin-top: 20px;
    align-self: flex-start;

    svg {
      margin: 5px;
      position: relative;
    }
  }

  &.visualizations-wrapper {
    width: 1350px;
    flex-wrap: wrap;
    justify-content: space-around;
  }
}

@import 'components/navigation';
@import 'components/vis-title';
@import 'components/main';
@import 'components/word-cloud';
@import 'components/news-time-series';

